# Gendiff-project

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci_tests.yml
gendiff/: __init__.py  cli.py  difference.py  generate.py  parse_args.py  read_files.py  read_incoming_data.py
gendiff/formatter/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1.yml  file2.yml  json_right_result.txt  right_result.py
